name:                keyring
version:             0.1.0.0
synopsis:            Keyring access
description:         Access the system keyring to store and retrieve passwords
homepage:            https://github.com/lunaryorn/haskell-keyring
bug-reports:         https://github.com/lunaryorn/haskell-keyring/issues
license:             MIT
license-file:        LICENSE
author:              Sebastian Wiesner
maintainer:          lunaryorn@gmail.com
copyright:           (C) 2014 Sebastian Wiesner
category:            System
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/lunaryorn/haskell-keyring.git
  branch:            master

source-repository this
  type:              git
  location:          https://github.com/lunaryorn/haskell-keyring.git
  tag:               0.1.0.0

flag All
  description:         Try to build as many backends as possible
  manual:              True
  default:             False

library
  ghc-options:         -Wall -Werror
  exposed-modules:     System.Keyring
  other-modules:       System.Keyring.Types
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010

  if os(darwin)
     cpp-options:      -DDARWIN
     exposed-modules:  System.Keyring.Darwin
     build-tools:      hsc2hs
     build-depends:    utf8-string >=0.3 && <0.4,
                       bytestring >=0.10 && <0.11
     frameworks:       Security CoreFoundation

  if !os(darwin) || flag(all)
     exposed-modules:  System.Keyring.Unix
                       System.Keyring.Unix.KDE
     build-depends:    udbus >=0.2 && <0.3
